--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -1,1 +1,3 @@
-<p>{{ user.id }}</p>
+<p><small>User ID:</small>{{ user.id }}</p>
+<h3><small>User Name:</small>{{ user.firstName }} {{ user.lastName }}</h3>
+<p><small>User Date of birth:</small> {{ user.dateOfBirth }}</p>
