The users info is returned to edit form

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -10,7 +10,7 @@
                     <td>
                         <button mat-icon-button color="primary" 
                                 aria-label="Example icon button with a home icon"
-                                [routerLink]="['/users', user.id]"
+                                [routerLink]="['/users', user.id, 'edit']"
                                 (click)="onEdit()">
                             <mat-icon>edit</mat-icon>
                           </button>
