--- a/src/app/users/edit-user/edit-user.component.html
+++ b/src/app/users/edit-user/edit-user.component.html
@@ -1,1 +1,30 @@
-<p>edit-user works!</p>
+<div>
+    <div class="form-group">
+      <label for="firstName">First Name</label>
+      <input
+        type="text"
+        id="firstName"
+        class="form-control"
+        [(ngModel)]="user.firstName">
+    </div>
+    <div class="form-group">
+        <label for="lastName">Last Name</label>
+        <input
+          type="text"
+          id="lastName"
+          class="form-control"
+          [(ngModel)]="user.lastName">
+      </div>
+      <div class="form-group">
+        <label for="dateOfBirth">Date of birth</label>
+        <input
+          type="text"
+          id="dateOfBirth"
+          class="form-control"
+          [(ngModel)]="user.dateOfBirth">
+      </div>
+    
+    <button
+      class="btn btn-primary"
+      (click)="onUpdateUser()">Save Changes</button>
+  </div>
