--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,8 @@
-<div>    
+<div> 
+    <hr>  
+    <button mat-raised-button color="primary"
+            [routerLink]="['/create']">Add New User</button>
+    <hr>
         <div>
             <table class="tftable">
                 <tr><th>ID</th><th>First Name</th><th>Last Name</th><th>Date of Birth</th><th>Actions</th></tr>
