--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,7 +1,7 @@
 <div> 
     <hr>  
     <button mat-raised-button color="primary"
-            [routerLink]="['/users/create']">Add New User</button>
+            [routerLink]="['/users/new']">Add New User</button>
     <hr>
         <div>
             <table class="tftable">
