Added onRemoveUser function to usersList

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,7 +1,7 @@
 <div> 
     <hr>  
     <button mat-raised-button color="primary"
-            [routerLink]="['/users/new']">Add New User</button>
+            [routerLink]="['users/create']">Add New User</button>
     <hr>
         <div>
             <table class="tftable">
@@ -15,12 +15,12 @@
                         <button mat-icon-button color="primary" 
                                 aria-label="Example icon button with a home icon"
                                 [routerLink]="['/users', user.id, 'edit']"
-                                (click)="onEdit()">
+                                >
                             <mat-icon>edit</mat-icon>
                           </button>
                           <button mat-icon-button color="warn" 
                                 aria-label="Example icon button with a home icon"
-                                [routerLink]="['/users']">
+                                (click)=onRemoveUser(0)>
                             <mat-icon>close</mat-icon>
                           </button>
                     </td></tr>
