Validation required input messages

--- a/src/app/users/edit-user/edit-user.component.html
+++ b/src/app/users/edit-user/edit-user.component.html
@@ -21,7 +21,7 @@
       <div class="form-group">
         <label for="date-of-birth">Date of Birth:</label>
         <input
-          type="text"
+          type="date"
           id="date-of-birth"
           formControlName="dateOfBirth"
           class="form-control"
