--- a/src/app/users/create-user/create-user.component.html
+++ b/src/app/users/create-user/create-user.component.html
@@ -8,6 +8,11 @@
           formControlName="firstName"
           class="form-control"
           required>
+          <div
+              *ngIf="!profileForm.get('firstName').valid && profileForm.get('firstName').touched"
+              class="help-block">
+              <span>This field is required!</span>
+          </div>
       </div>
       <div class="form-group">
         <label for="last-name">Last Name: </label>
@@ -17,15 +22,25 @@
           formControlName="lastName"
           class="form-control"
           required>
+          <div
+              *ngIf="!profileForm.get('lastName').valid && profileForm.get('lastName').touched"
+              class="help-block">
+              <span>This field is required!</span>
+          </div>
       </div>
       <div class="form-group">
         <label for="date-of-birth">Date of Birth:</label>
         <input
-          type="text"
+          type="date"
           id="date-of-birth"
           formControlName="dateOfBirth"
           class="form-control"
           required>
+          <div
+              *ngIf="!profileForm.get('dateOfBirth').valid && profileForm.get('dateOfBirth').touched"
+              class="help-block">
+              <span>This field is required!</span>
+          </div>
       </div>
     <button type="submit" [disabled]="!profileForm.valid">Save</button>
 </form>
