Some styles added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
-<h1>This is the test app!</h1>
+<div class="home-main-wrapp">
+    <div class="home-main-inner">
+        <h1>This is the TEST APP!</h1>
+    </div>
+</div>
 
 <router-outlet></router-outlet>
