--- a/src/app/users/edit-user/edit-user.component.html
+++ b/src/app/users/edit-user/edit-user.component.html
@@ -1,31 +1,35 @@
-
-<form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-        <label for="first-name">First Name: </label>
-        <input
-          type="text"
-          id="first-name"
-          formControlName="firstName"
-          class="form-control"
-          required>
-      </div>
+<div class="form-wrapper">
+  <h3>Edit user:</h3>
+  <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" class="user-form">
       <div class="form-group">
-        <label for="last-name">Last Name: </label>
-        <input
-          type="text"
-          id="last-name"
-          formControlName="lastName"
-          class="form-control"
-          required>
-      </div>
-      <div class="form-group">
-        <label for="date-of-birth">Date of Birth:</label>
-        <input
-          type="date"
-          id="date-of-birth"
-          formControlName="dateOfBirth"
-          class="form-control"
-          required>
-      </div>
-    <button type="submit" [disabled]="!profileForm.valid">Update</button>
-</form>
+          <label for="first-name">First Name: </label>
+          <input
+            type="text"
+            id="first-name"
+            formControlName="firstName"
+            class="form-control"
+            required>
+        </div>
+        <div class="form-group">
+          <label for="last-name">Last Name: </label>
+          <input
+            type="text"
+            id="last-name"
+            formControlName="lastName"
+            class="form-control"
+            required>
+        </div>
+        <div class="form-group">
+          <label for="date-of-birth">Date of Birth:</label>
+          <input
+            type="date"
+            id="date-of-birth"
+            formControlName="dateOfBirth"
+            class="form-control"
+            required>
+        </div>
+      <button type="submit" 
+              [disabled]="!profileForm.valid"
+              class="submit-btn">Update</button>
+  </form>
+</div>
