--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,5 +1,55 @@
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.users-heading {
+    padding: 30px 0;
+}
+.add-btn {
+    padding: 10px 15px;
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    color: #25b7c4;
+    transition: all 0.5s ease-out;
+}
+.add-btn:hover {
+    cursor: pointer;
+    background: -webkit-linear-gradient(left, #25c481, #25b7c4);
+    background: linear-gradient(to right, #25c481, #25b7c4);
+    color: #fff;
+    border: 1px solid #fff;
+}
 .tftable {font-size:12px;color:#333333;width:100%;border-width: 1px;border-color: #729ea5;border-collapse: collapse;}
-.tftable th {font-size:12px;background-color:#acc8cc;border-width: 1px;padding: 8px;border-style: solid;border-color: #729ea5;text-align:left;}
-.tftable tr {background-color:#d4e3e5;}
-.tftable td {font-size:12px;border-width: 1px;padding: 8px;border-style: solid;border-color: #729ea5;}
-.tftable tr:hover {background-color:#ffffff;}
+.tftable th {
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    color: #fff;
+    text-transform: uppercase;
+}
+.tftable tr.header-table {background-color:rgba(255,255,255,0.45);}
+.tftable td {
+    padding: 15px;
+    text-align: left;
+    vertical-align:middle;
+    font-weight: 300;
+    font-size: 12px;
+    color: #fff;
+    border-bottom: solid 1px rgba(255,255,255,0.1);
+}
+.tftable tr:hover {background-color:rgba(255,255,255,0.3)}
+button.edit-btn,
+button.remove-btn {
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    padding: 3px 5px;
+    color: #fff;
+    margin: 0 3px;
+}
+button.edit-btn,
+button.remove-btn:hover {
+    cursor: pointer;
+}
