--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -3,6 +3,9 @@
     <button mat-raised-button color="primary"
             class="add-btn"
             [routerLink]="['new']">Add New User</button>
+            <button mat-raised-button color="primary"
+            class="add-btn"
+            (click)="onFetchUser($event)">Fetch User</button>
             </div>
     <div>
             <table class="tftable">
